--- a/index.html
+++ b/index.html
@@ -1,198 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>Pump Track Timer</title>
-  <style>
-    * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-    body { margin:0; font-family:system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; background:#16181d; color:#f9fafb; height:100vh; display:flex; flex-direction:column; overflow:hidden; }
-    header { text-align:center; padding:1.25rem 1rem 0.75rem; }
-    header h1 { margin:0; font-size:1.7rem; font-weight:600; letter-spacing:0.4px; color:#f3f4f6; }
-    .buttons { flex:1; display:flex; flex-direction:column; gap:0.85rem; padding:1rem; }
-    button { width:100%; border:none; font-size:1.35rem; font-weight:600; color:#f3f4f6; background:#2a2d33; cursor:pointer; display:flex; align-items:center; justify-content:center; gap:0.6rem; touch-action:manipulation; box-shadow:0 6px 14px rgba(0,0,0,0.35); }
-    .btn-big { flex:1; border-radius:22px; }
-    .begin { background:#3a3f46; font-size:1.45rem; }
-    .leaderboard { background:#30343a; }
-    .settings { flex:0.5; font-size:1.05rem; background:#24272d; box-shadow:none; opacity:0.9; border-radius:22px; }
-    button:active { transform:scale(0.985); background:#40454d; }
-    .leaderboard-view, .session-view { position:fixed; inset:0; background:#16181d; opacity:0; pointer-events:none; transform:scale(1.05); transition:opacity 0.45s ease, transform 0.45s ease; display:flex; flex-direction:column; }
-    .leaderboard-view.active, .session-view.active { opacity:1; pointer-events:auto; transform:scale(1); }
-    .leaderboard-header { text-align:center; padding:1.6rem 1rem 0.8rem; font-size:1.6rem; font-weight:600; color:#9ca3af; }
-    .back-btn { position:fixed; top:0.75rem; left:0.75rem; min-width:48px; min-height:48px; border-radius:10px; background:#24272d; border:none; color:#f3f4f6; font-size:1.3rem; display:flex; align-items:center; justify-content:center; box-shadow:0 6px 14px rgba(0,0,0,0.4); z-index:10; }
-    .leaderboard-grid { display:grid; grid-template-columns:1fr 3fr; padding:0 1rem 1rem; row-gap:0.6rem; column-gap:1rem; font-size:1.05rem; overflow-y:auto; flex:1; }
-    .leaderboard-grid div { padding:0.55rem 0.6rem; background:#24272d; border-radius:10px; }
-    .grid-header { font-weight:600; color:#d1d5db; background:transparent !important; border-bottom:1px solid #2a2d33; }
-    .session-view button { border-radius:0px; }
-    .seven-seg { font-family:"Courier New", monospace; font-size:4.2rem; letter-spacing:0.2rem; color:#e5e7eb; background:#111318; padding:1rem 1.2rem; border-radius:8px; box-shadow:inset 0 0 18px rgba(0,0,0,0.7); text-align:center; margin:auto; flex:0 0 auto; }
-    .segment-btn { background:#1f2228; font-family:"Courier New", monospace; letter-spacing:0.08rem; border-radius:0px; }
-    .session-text { font-size:2rem; text-align:center; margin-top:auto; margin-bottom:auto; color:#f3f4f6; }
-    .final-label { font-size:2rem; text-align:center; margin-top:0.5rem; margin-bottom:auto; color:#f3f4f6; }
-    #sessionActions { margin-top:auto; margin-bottom:2rem; display:flex; flex-direction:column; gap:0.8rem; }
-    #nameEntryContainer { max-height:0; overflow:hidden; transition:max-height 0.4s ease; }
-    #nameEntryContainer input { width:100%; padding:0.6rem; font-size:1rem; border-radius:6px; border:none; margin-top:0.4rem; }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Pump Track Timer</title>
+
+<style>
+* {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+
+body {
+  margin: 0;
+  font-family: system-ui, sans-serif;
+  background: #1e1f22;
+  color: #f2f2f2;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.screen {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(1.05);
+  transition: 0.4s;
+}
+
+.screen.active {
+  opacity: 1;
+  pointer-events: auto;
+  transform: scale(1);
+}
+
+h1 {
+  text-align: center;
+  font-weight: 600;
+}
+
+button {
+  background: #2b2d31;
+  color: #f2f2f2;
+  border: none;
+  border-radius: 6px;
+  padding: 1.2rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+button:active {
+  transform: scale(0.98);
+}
+
+.main-buttons {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.small-btn {
+  padding: 0.7rem;
+  font-size: 1rem;
+}
+
+.back {
+  position: absolute;
+  top: 0.75rem;
+  left: 0.75rem;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.center {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.timer {
+  font-family: monospace;
+  font-size: 4.5rem;
+}
+
+.big-text {
+  font-size: 3.5rem;
+  font-weight: 700;
+}
+
+.bottom {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.leaderboard {
+  overflow-y: auto;
+  margin-top: 1rem;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.row div {
+  background: #2b2d31;
+  padding: 0.6rem;
+  border-radius: 4px;
+}
+</style>
 </head>
+
 <body>
-  <header>
-    <h1>Pump Track Timer</h1>
-  </header>
-  <div class="buttons">
-    <button class="btn-big begin" id="armBtn">⏱ Start Session</button>
-    <button class="btn-big leaderboard">Leaderboard</button>
-    <button class="settings"><span>⚙️</span> Settings</button>
+
+<!-- HOME -->
+<div class="screen active" id="home">
+  <h1>Pump Track Timer</h1>
+  <div class="main-buttons">
+    <button onclick="startSession()">⏱ Start Session</button>
+    <button onclick="openScreen('leaderboard')">Leaderboard</button>
+    <button onclick="openScreen('settings')" class="small-btn">⚙ Settings</button>
   </div>
-  <div class="leaderboard-view" id="leaderboardView">
-    <button class="back-btn" id="backBtn">←</button>
-    <div class="leaderboard-header">Leaderboard</div>
-    <div class="leaderboard-grid" id="leaderboardGrid">
-      <div class="grid-header">Name</div>
-      <div class="grid-header">Time</div>
-      <div>Rider 1</div><div>00:42.31</div>
-      <div>Rider 2</div><div>00:43.02</div>
-      <div>Rider 3</div><div>00:44.88</div>
-      <div>Rider 4</div><div>00:45.10</div>
-      <div>Rider 5</div><div>00:46.55</div>
-      <div>Rider 6</div><div>00:47.03</div>
-      <div>Rider 7</div><div>00:47.89</div>
-      <div>Rider 8</div><div>00:48.22</div>
-      <div>Rider 9</div><div>00:49.01</div>
-      <div>Rider 10</div><div>00:49.76</div>
-      <div>Rider 11</div><div>00:50.12</div>
-      <div>Rider 12</div><div>00:50.89</div>
-      <div>Rider 13</div><div>00:51.34</div>
-      <div>Rider 14</div><div>00:52.07</div>
-      <div>Rider 15</div><div>00:52.88</div>
-      <div>Rider 16</div><div>00:53.41</div>
-      <div>Rider 17</div><div>00:54.19</div>
-      <div>Rider 18</div><div>00:54.90</div>
-      <div>Rider 19</div><div>00:55.66</div>
-      <div>Rider 20</div><div>00:56.23</div>
-    </div>
+</div>
+
+<!-- SESSION -->
+<div class="screen" id="session">
+  <button class="back" onclick="goHome()">←</button>
+  <div class="center" id="sessionText">
+    <div class="big-text">Waiting for rider</div>
   </div>
-  <div class="session-view" id="sessionView">
-    <button class="back-btn" id="sessionBack">←</button>
-    <div id="sessionText" class="session-text">Waiting for rider</div>
-    <div id="finalLabel" class="final-label" style="display:none;">Final Time</div>
-    <div id="timerDisplay" class="seven-seg">00:00.00</div>
-    <div id="sessionActions">
-      <button class="segment-btn" id="enterName">Enter name for leaderboard</button>
-      <div id="nameEntryContainer">
-        <input type="text" id="riderNameInput" placeholder="Enter your name" />
-        <button class="segment-btn" id="submitName">Submit</button>
-      </div>
-      <button class="segment-btn" id="nextRider">Reset for next rider</button>
-    </div>
+  <div class="center timer" id="timer" style="display:none">00:00.00</div>
+  <div class="bottom" id="sessionButtons" style="display:none">
+    <button onclick="enterName()">Enter name</button>
+    <button onclick="goHome()">Reset</button>
   </div>
-  <script>
-    const leaderboardBtn = document.querySelector('.leaderboard');
-    const leaderboardView = document.getElementById('leaderboardView');
-    const sessionView = document.getElementById('sessionView');
-    const armBtn = document.getElementById('armBtn');
-    const backBtn = document.getElementById('backBtn');
-    const sessionBack = document.getElementById('sessionBack');
-    const sessionText = document.getElementById('sessionText');
-    const finalLabel = document.getElementById('finalLabel');
-    const timerDisplay = document.getElementById('timerDisplay');
-    const sessionActions = document.getElementById('sessionActions');
-    const nextRiderBtn = document.getElementById('nextRider');
-    const enterNameBtn = document.getElementById('enterName');
-    const nameEntryContainer = document.getElementById('nameEntryContainer');
-    const riderNameInput = document.getElementById('riderNameInput');
-    const submitNameBtn = document.getElementById('submitName');
-    const leaderboardGrid = document.getElementById('leaderboardGrid');
+</div>
 
-    let roughStart = null;
-    let roughInterval = null;
-    let lastTime = null;
+<!-- LEADERBOARD -->
+<div class="screen" id="leaderboard">
+  <button class="back" onclick="goHome()">←</button>
+  <h1>Leaderboard</h1>
+  <div class="leaderboard" id="board"></div>
+</div>
 
-    leaderboardBtn?.addEventListener('click', () => { leaderboardView?.classList.add('active'); });
-    backBtn?.addEventListener('click', () => { leaderboardView?.classList.remove('active'); });
+<!-- SETTINGS -->
+<div class="screen" id="settings">
+  <button class="back" onclick="goHome()">←</button>
+  <h1>Settings</h1>
+  <p style="text-align:center">
+    Ultrasonic Distance: <span id="dist">50</span>cm
+  </p>
+  <input type="range" min="20" max="200" step="10" value="50"
+    oninput="document.getElementById('dist').textContent=this.value">
+</div>
 
-    armBtn?.addEventListener('click', () => {
-      if(sessionView){
-        sessionView.classList.add('active');
-        sessionText && (sessionText.style.display = 'block');
-        finalLabel && (finalLabel.style.display = 'none');
-        timerDisplay && (timerDisplay.textContent = '00:00.00');
-        sessionActions && (sessionActions.style.display = 'none');
+<script>
+let leaderboard = [];
+let timerInterval;
+let startTime;
+let finalTime;
 
-        setTimeout(() => { simulateBeamStart(); }, 3000);
-      }
-    });
+function openScreen(id) {
+  document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
+}
 
-    sessionBack?.addEventListener('click', () => { sessionView?.classList.remove('active'); clearInterval(roughInterval); });
+function goHome() {
+  clearInterval(timerInterval);
+  openScreen('home');
+}
 
-    function simulateBeamStart() {
-      sessionText && (sessionText.style.display = 'none');
-      roughStart = Date.now();
-      roughInterval = setInterval(() => {
-        const elapsed = Date.now() - roughStart;
-        timerDisplay && (timerDisplay.textContent = formatTime(elapsed));
-      }, 50);
+function startSession() {
+  openScreen('session');
+  document.getElementById('sessionText').innerHTML = '<div class="big-text">Waiting for rider</div>';
+  document.getElementById('timer').style.display = 'none';
+  document.getElementById('sessionButtons').style.display = 'none';
 
-      const finishDelay = 6000 + Math.random() * 4000;
-      setTimeout(simulateBeamEnd, finishDelay);
-    }
+  setTimeout(() => {
+    document.getElementById('sessionText').innerHTML = '<div class="big-text">LAP STARTED</div>';
+    startTime = Date.now();
 
-    function simulateBeamEnd() {
-      clearInterval(roughInterval);
-      lastTime = timerDisplay.textContent;
-      finalLabel && (finalLabel.style.display = 'block');
-      if(timerDisplay) timerDisplay.style.animation = 'flash 0.3s alternate 6';
-      sessionActions && (sessionActions.style.display = 'flex');
-    }
+    timerInterval = setInterval(() => {
+      const ms = Date.now() - startTime;
+      document.getElementById('timer').style.display = 'block';
+      document.getElementById('timer').textContent = format(ms);
+    }, 50);
 
-    nextRiderBtn?.addEventListener('click', () => { sessionView?.classList.remove('active'); });
+    const stopAfter = 6000 + Math.random() * 4000;
+    setTimeout(stopTimer, stopAfter);
+  }, 3000);
+}
 
-    enterNameBtn?.addEventListener('click', () => { nameEntryContainer.style.maxHeight = nameEntryContainer.scrollHeight + 'px'; });
+function stopTimer() {
+  clearInterval(timerInterval);
+  finalTime = Date.now() - startTime;
+  document.getElementById('sessionText').innerHTML = '<div class="big-text">Final Time</div>';
+  document.getElementById('sessionButtons').style.display = 'flex';
+}
 
-    submitNameBtn?.addEventListener('click', () => {
-      const name = riderNameInput.value.trim();
-      if(name && lastTime){
-        addToLeaderboard(name, lastTime);
-        riderNameInput.value = '';
-        nameEntryContainer.style.maxHeight = '0';
-      }
-    });
+function format(ms) {
+  const s = Math.floor(ms / 1000);
+  const m = Math.floor(s / 60);
+  return `${String(m).padStart(2,'0')}:${String(s%60).padStart(2,'0')}.${String(Math.floor(ms%1000/10)).padStart(2,'0')}`;
+}
 
-    function addToLeaderboard(name, time){
-      // Check if name already exists
-      const entries = [];
-      for(let i=2; i<leaderboardGrid.children.length; i+=2){
-        entries.push({name: leaderboardGrid.children[i].textContent, time: leaderboardGrid.children[i+1].textContent});
-      }
-      const existing = entries.find(e => e.name === name);
-      if(existing){
-        // Keep the fastest time
-        const oldTime = parseFloat(existing.time.replace(':','.'));
-        const newTime = parseFloat(time.replace(':','.'));
-        if(newTime < oldTime){ existing.time = time; }
-      } else {
-        entries.push({name, time});
-      }
-      // Sort by time ascending
-      entries.sort((a,b)=>parseFloat(a.time.replace(':','.')) - parseFloat(b.time.replace(':','.')));
-      // Remove old entries
-      while(leaderboardGrid.children.length > 2){ leaderboardGrid.removeChild(leaderboardGrid.lastChild); }
-      // Re-add sorted entries
-      entries.forEach(entry => {
-        const nameDiv = document.createElement('div');
-        const timeDiv = document.createElement('div');
-        nameDiv.textContent = entry.name;
-        timeDiv.textContent = entry.time;
-        leaderboardGrid.appendChild(nameDiv);
-        leaderboardGrid.appendChild(timeDiv);
-      });
-    }
+function enterName() {
+  const name = prompt("Enter rider name");
+  if (!name) return;
 
-    function formatTime(ms) {
-      const totalSeconds = ms / 1000;
-      const minutes = Math.floor(totalSeconds / 60);
-      const seconds = Math.floor(totalSeconds % 60);
-      const hundredths = Math.floor((ms % 1000) / 10);
-      return `${String(minutes).padStart(2,'0')}:${String(seconds).padStart(2,'0')}.${String(hundredths).padStart(2,'0')}`;
-    }
-  </script>
+  const existing = leaderboard.find(e => e.name === name);
+  if (!existing || finalTime < existing.time) {
+    if (existing) existing.time = finalTime;
+    else leaderboard.push({name, time: finalTime});
+  }
+
+  leaderboard.sort((a,b) => a.time - b.time);
+  renderBoard();
+}
+
+function renderBoard() {
+  const board = document.getElementById('board');
+  board.innerHTML = '';
+  leaderboard.forEach(e => {
+    board.innerHTML += `
+      <div class="row">
+        <div>${e.name}</div>
+        <div>${format(e.time)}</div>
+      </div>`;
+  });
+}
+</script>
+
 </body>
 </html>
